# DontAskToAsk-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
Research/: discord_scraper.py
Research/Data/processed_data/: FinalDirect.csv  FinalDirect_lemma.csv  FinalPermission.csv  FinalPermission_lemma.csv  finalcleaned6-7k.csv
Research/Data/raw_scraped_data/: iterr.csv  scrapedQ.csv
Research/models_notebook/: RandomForest2.0.ipynb  RandomForestLemma.ipynb
Research/notebooks/: Scraped_cleaning.ipynb  SpcayDoc.csv  scraped_labeling.ipynb
src/: classification.py  main.py  responses.py
src/DontAskToAsk_bot/: classification.py  config.py  main.py  responses.py  test.py
src/DontAskToAsk_bot/db/: init_db.py  user_tracker.db  users_db.py
